-- Prototype dump (sanitized) for coursework/demo only.
-- No real data; do not deploy to production.

SET DB_CLOSE_DELAY -1;
;
CREATE TABLE users (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username VARCHAR(255) NOT NULL UNIQUE,
  email VARCHAR(255) NOT NULL UNIQUE,
  password VARCHAR(255) NOT NULL,
  first_name VARCHAR(255),
  last_name VARCHAR(255),
  created_at TIMESTAMP,
  enabled BOOLEAN NOT NULL
);

CREATE TABLE portfolios (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id BIGINT NOT NULL,
  name VARCHAR(255) NOT NULL,
  portfolio_type VARCHAR(10) NOT NULL,
  currency CHAR(3) NOT NULL,
  description VARCHAR(255),
  created_at TIMESTAMP,
  is_active BOOLEAN NOT NULL
);

CREATE TABLE trades (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  portfolio_id BIGINT NOT NULL,
  symbol VARCHAR(10) NOT NULL,
  entry_price NUMERIC(19,6) NOT NULL,
  exit_price NUMERIC(19,6),
  quantity INT NOT NULL,
  entry_date DATE NOT NULL,
  exit_date DATE,
  margin_amount NUMERIC(10,4) NOT NULL,
  leverage NUMERIC(10,2),
  borrowed_amount NUMERIC(19,6),
  collateral_amount NUMERIC(19,6),
  maintenance_margin NUMERIC(10,4),
  financing_rate_type VARCHAR(8),
  financing_currency VARCHAR(5),
  daily_interest TEXT,
  notes TEXT
);

CREATE TABLE trade_closures (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  trade_id BIGINT NOT NULL,
  closed_quantity INT NOT NULL,
  exit_price NUMERIC(19,6) NOT NULL,
  exit_date DATE NOT NULL,
  notes TEXT
);

CREATE TABLE financing_events (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  trade_id BIGINT NOT NULL,
  event_date DATE NOT NULL,
  event_type VARCHAR(20) NOT NULL,
  rate NUMERIC(10,4),
  amount_change NUMERIC(19,6),
  notes TEXT
);

CREATE TABLE spot_transactions (
  id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  portfolio_id BIGINT NOT NULL,
  company VARCHAR(255),
  ticker VARCHAR(20),
  transaction_type VARCHAR(20),
  price NUMERIC(19,6),
  quantity NUMERIC(19,6),
  amount NUMERIC(19,6),
  trade_date DATE,
  note TEXT
);

-- Sample data (sanitized)
INSERT INTO users (id, username, email, password, first_name, last_name, created_at, enabled) VALUES
(1, 'demo.user', 'demo@example.com', 'hashed', 'Demo', 'User', CURRENT_TIMESTAMP, TRUE);

INSERT INTO portfolios (id, user_id, name, portfolio_type, currency, description, created_at, is_active) VALUES
(1, 1, 'Demo Margin', 'MARGIN', 'USD', 'Prototype margin portfolio', CURRENT_TIMESTAMP, TRUE),
(2, 1, 'Demo Spot', 'SPOT', 'USD', 'Prototype spot portfolio', CURRENT_TIMESTAMP, TRUE);

INSERT INTO trades (id, portfolio_id, symbol, entry_price, exit_price, quantity, entry_date, exit_date, margin_amount, leverage, borrowed_amount, collateral_amount, maintenance_margin, financing_rate_type, financing_currency, daily_interest, notes) VALUES
(1, 1, 'AAPL', 180.25, NULL, 50, DATE '2024-03-01', NULL, 8.50, 2.5, 4500.000000, 2250.000000, 20.0000, 'FIXED', 'USD', NULL, 'Prototype open trade'),
(2, 1, 'MSFT', 370.50, 395.10, 10, DATE '2024-03-02', DATE '2024-04-05', 7.90, 2.0, 1852.500000, 926.250000, 20.0000, 'FIXED', 'USD', NULL, 'Prototype closed trade');

INSERT INTO trade_closures (id, trade_id, closed_quantity, exit_price, exit_date, notes) VALUES
(1, 2, 10, 395.10, DATE '2024-04-05', 'Prototype closure');

INSERT INTO financing_events (id, trade_id, event_date, event_type, rate, amount_change, notes) VALUES
(1, 1, DATE '2024-03-15', 'RATE_CHANGE', 7.90, NULL, 'Prototype rate change');

INSERT INTO spot_transactions (id, portfolio_id, company, ticker, transaction_type, price, quantity, amount, trade_date, note) VALUES
(1, 2, 'Cash', 'USD', 'DEPOSIT', 1, 5000, 5000, DATE '2024-03-01', 'Prototype funding'),
(2, 2, 'Microsoft Corp', 'MSFT', 'BUY', 370.50, 10, -3705, DATE '2024-03-02', 'Prototype spot buy');
